# minimax_tictactoe

./: CMakeLists.txt
.cache/clangd/index/: Board.cpp.5734ED76CB3C4014.idx  Board.h.C75A37E2D22895D9.idx  Constants.h.A7BF2ACB2C087EAC.idx  Game.cpp.77F6A7FB8CC13A22.idx  Game.h.20220EDF63937D5B.idx  Move.h.4280646A317B57AF.idx  Player.h.FE46AAC8D9E930CA.idx  main.cpp.37C89173F7061E47.idx  minmax_ai.cpp.12E5FDF6E4447AA0.idx  minmax_ai.h.87873A05B2BDB76F.idx
include/: Board.h  Constants.h  Game.h  Move.h  Player.h  minmax_ai.h
src/: Board.cpp  Game.cpp  main.cpp  minmax_ai.cpp
